separate Local Mode endpoint invocation and results comparison

--- a/keras-embeddings-script-mode/keras-embeddings.ipynb
+++ b/keras-embeddings-script-mode/keras-embeddings.ipynb
@@ -334,13 +334,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get predictions from the local endpoint, simply invoke the Predictor's `predict` method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_results = local_predictor.predict(x_val[:10])['predictions'] \n",
-    "\n",
+    "local_results = local_predictor.predict(x_val[:10])['predictions'] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a sanity check, the predictions can be compared against the actual target values, which are the numbers 0 to 19 representing the twenty different news group categories."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print('predictions: \\t{}'.format(np.argmax(local_results, axis=1)))\n",
     "print('target values: \\t{}'.format(np.argmax(y_val[:10], axis=1)))"
    ]
