update to tf 1.13 etc.

--- a/tf-batch-inference-script/tf-batch-inference-script.ipynb
+++ b/tf-batch-inference-script/tf-batch-inference-script.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "#  Highly Performant TensorFlow Batch Inference and Training  \n",
     "\n",
-    "For use cases involving large datasets, particularly those where the data is images, it often is necessary to perform distributed training on a cluster of multiple machines. Similarly, when it is time to set up an inference workflow, it also may be necessary to perform highly performant batch inference using a cluster.  In this notebook, we'll examine how to do these tasks with TensorFlow in Amazon SageMaker. \n",
+    "For use cases involving large datasets, particularly those where the data is images, it often is necessary to perform distributed training on a cluster of multiple machines. Similarly, when it is time to set up an inference workflow, it also may be necessary to perform highly performant batch inference using a cluster.  In this notebook, we'll examine how to do these tasks with TensorFlow in Amazon SageMaker, with emphasis on batch inference. \n",
     "\n",
-    "In this notebook, we'll use a basic Convolutional Neural Network (CNN) based on [the Keras examples](https://github.com/keras-team/keras/blob/master/examples/cifar10_cnn.py), but using the tf.Keras API rather than the separate reference implementation of Keras.  We'll train the CNN to classify images using the [CIFAR-10 dataset](https://www.cs.toronto.edu/~kriz/cifar.html), a well-known computer vision dataset. It consists of 60,000 32x32 images belonging to 10 different classes, with 6,000 images per class. Here is a graphic of the classes in the dataset, as well as 10 random images from each:\n",
+    "For training a model, we'll use a basic Convolutional Neural Network (CNN) based on [the Keras examples](https://github.com/keras-team/keras/blob/master/examples/cifar10_cnn.py), but using the tf.Keras API rather than the separate reference implementation of Keras.  We'll train the CNN to classify images using the [CIFAR-10 dataset](https://www.cs.toronto.edu/~kriz/cifar.html), a well-known computer vision dataset. It consists of 60,000 32x32 images belonging to 10 different classes, with 6,000 images per class. Here is a graphic of the classes in the dataset, as well as 10 random images from each:\n",
     "\n",
     "![cifar10](https://maet3608.github.io/nuts-ml/_images/cifar10.png)\n"
    ]
@@ -38,7 +38,7 @@
     "role = get_execution_role()\n",
     "\n",
     "bucket = sagemaker_session.default_bucket()\n",
-    "prefix = 'sagemaker/DEMO-tf-horovod-inference'\n",
+    "prefix = 'sagemaker/DEMO-tf-batch-inference-script'\n",
     "print('Bucket:\\n{}'.format(bucket))"
    ]
   },
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll run a script that fetches the dataset and converts it to the TFRecord format, which provides several conveniences for training models in TensorFlow."
+    "Now we'll run a script that fetches the dataset and converts it to the TFRecord format, which is convenient and often more performant for training models in TensorFlow."
    ]
   },
   {
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = sagemaker_session.upload_data(path='data', key_prefix='data/DEMO-cifar10-tf')\n",
+    "inputs = sagemaker_session.upload_data(path='data', key_prefix='data/DEMO-batch-cifar10-tf')\n",
     "display(inputs)"
    ]
   },
@@ -81,13 +81,15 @@
    "source": [
     "## Distributed training with Horovod\n",
     "\n",
-    "Sometimes it makes sense to perform training on a single machine. For large datasets, however, it may be necessary to perform distributed training on a cluster of multiple machines. In fact, it may be not only faster but cheaper to do distributed training on several machines rather than one machine. Fortunately, Amazon SageMaker makes it easy to run distributed training without having to manage cluster setup and tear down.  Distributed training can be done on a cluster of multiple machines using either parameter servers or Ring-AllReduce with Horovod. \n",
+    "Although batch inference is the focus of this notebook, to begin we need a trained model. Sometimes it makes sense to perform training on a single machine. For large datasets, however, it may be necessary to perform distributed training on a cluster of multiple machines. In fact, it may be not only faster but cheaper to do distributed training on several machines rather than one machine. Fortunately, Amazon SageMaker makes it easy to run distributed training without having to manage cluster setup and tear down.  Distributed training can be done using methods such as parameter servers or Ring-AllReduce with Horovod, an open source distributed training framework for TensorFlow, Keras, PyTorch, and MXNet.  \n",
     "\n",
-    "Horovod is an open source distributed training framework for TensorFlow, Keras, PyTorch, and MXNet. It is an alternative to the more \"traditional\" parameter server method of performing distributed training.  In Amazon SageMaker, Horovod is only available with TensorFlow version 1.12 or newer. Only a few lines of code are necessary to use Horovod for distributed training of a Keras model defined by the tf.keras API.  For details, see the `train.py` script included with this notebook; the changes primarily relate to:\n",
+    "For this notebook we'll use Amazon SageMaker Script Mode to set up a Horovod-based training job.  In Script Mode, your training job uses Amazon SageMaker's prebuilt TensorFlow containers with TensorFlow training scripts similar to those you would use outside SageMaker.  A major advantage of Script Mode is that only a few lines of code are necessary to use Horovod for distributed training with the tf.keras API.  For details, see the `train.py` script included with this notebook; the changes primarily relate to:\n",
     "\n",
     "- importing Horovod.\n",
     "- initializing Horovod.\n",
     "- configuring GPU options and setting a Keras/tf.session with those options.\n",
+    "\n",
+    "Horovod is only available with TensorFlow version 1.12 or newer in Script Mode. \n",
     "\n",
     "Once we have a training script, the next step is to set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job.  It is very similar to an Estimator for training on a single machine, except we specify a `distributions` parameter describing Horovod attributes such as the number of process per host, which is set here to the number of GPUs per machine.  Beyond these few simple parameters and the few lines of code in the training script, there is nothing else you need to do to use distributed training with Horovod; Amazon SageMaker handles the heavy lifting for you and manages the underlying cluster setup."
    ]
@@ -112,11 +114,11 @@
     "                }\n",
     "hyperparameters = {'epochs': 60, 'batch-size' : 256}\n",
     "\n",
-    "estimator_dist = TensorFlow(base_job_name='dist-cifar10-tf',\n",
+    "estimator_hvd = TensorFlow(base_job_name='dist-cifar10-tf',\n",
     "                       source_dir='code',\n",
     "                       entry_point='train.py', \n",
     "                       role=role,\n",
-    "                       framework_version='1.12.0',\n",
+    "                       framework_version='1.13',\n",
     "                       py_version='py3',\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       train_instance_count=hvd_instance_count, \n",
@@ -139,7 +141,7 @@
    "outputs": [],
    "source": [
     "remote_inputs = {'train' : inputs+'/train', 'validation' : inputs+'/validation', 'eval' : inputs+'/eval'}\n",
-    "estimator_dist.fit(remote_inputs, wait=True)"
+    "estimator_hvd.fit(remote_inputs)"
    ]
   },
   {
@@ -150,16 +152,16 @@
     "\n",
     "Amazon SageMaker lets you deploy a model to an endpoint for real-time inferences, or create a Transform Job for offline inference. If a use case does not require individual predictions in near real-time, an Amazon SageMaker Batch Transform job is likely a better alternative. Although hosted endpoints also can be used for pseudo-batch prediction, the process is more involved than using the alternative Batch Transform, which is designed for large-scale, asynchronous batch inference.\n",
     "\n",
-    "A typical problem in working with batch inference is how to convert data into tensors that can be input to the model.  For example, image data in .png or .jpg format cannot be directly input to a model, but rather must be converted first.  Additionally, sometimes other preprocessing of the data must be performed, such as resizing.  The Amazon SageMaker TFS container provides facilities for doing this efficiently.  "
+    "A typical problem in working with batch inference is how to convert data into tensors that can be input to the model.  For example, image data in .png or .jpg format cannot be directly input to a model, but rather must be converted first.  Additionally, sometimes other preprocessing of the data must be performed, such as resizing.  The Amazon SageMaker TFS container provides functionality for doing this efficiently.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pre/post-postprocessing script\n",
+    "### Pre/post-postprocessing inference script\n",
     "\n",
-    "The TFS container in Amazon SageMaker by default uses the REST API to serve prediction requests. This requires the input data to be converted to JSON format.  One way to do this is to create a Docker container to do the conversion, then create an overall Amazon SageMaker model that links the conversion container to the TensorFlow Serving container with the model. This is known as an Amazon SageMaker Inference Pipeline, as demonstrated in another [sample notebook](https://github.com/awslabs/amazon-sagemaker-examples/tree/master/advanced_functionality/working_with_tfrecords).  \n",
+    "The TFS container in Amazon SageMaker by default uses the REST API to serve prediction requests. This requires the input data to be converted to JSON format.  One way to do this is to create a Docker container to do the conversion, then create an overall Amazon SageMaker model that links the conversion container to the TensorFlow Serving container with the model. This is known as an Amazon SageMaker Inference Pipeline, as demonstrated in another [sample notebook](https://github.com/awslabs/amazon-sagemaker-examples/tree/master/sagemaker_batch_transform/working_with_tfrecords).  \n",
     "\n",
     "However, as a more convenient alternative for many use cases, the Amazon SageMaker TFS container provides a data pre/post-processing script feature that allows you to simply supply a data transformation script.  Using such a script, there is no need to build containers or directly work with Docker.  The simplest form of a script must only (1) implement an `input_handler` and `output_handler` interface, as shown in the code below, (2) be named `inference.py`, and (3) be placed in a `/code` directory."
    ]
@@ -208,7 +210,7 @@
     "\n",
     "The code below creates a SageMaker Model entity that will be used for Batch inference, and runs a Transform Job using that Model. The Model contains a reference to the TFS container, the TensorFlow SavedModel we trained above, the pre- and post-processing script, and the `requirements.txt` file.\n",
     "\n",
-    "For improved performance, we'll set the `max_concurrent_transforms` and `max_payload` parameters of the Transformer object, which controls the maximum number of parallel requests that can be sent to each instance in a transform job and the maximum size of each request body.\n",
+    "For improved performance, we'll set the `max_concurrent_transforms` and `max_payload` parameters of the Transformer object, which control the maximum number of parallel requests that can be sent to each instance in a transform job and the maximum size of each request body.\n",
     "\n",
     "When performing inference on entire, unsplit S3 objects, it is recommended that you set `max_payload` to be slightly larger than the largest S3 object in your dataset, and that you experiment with the `max_concurrent_transforms` parameter in powers of two to find a value that maximizes throughput for your model."
    ]
@@ -221,15 +223,15 @@
    "source": [
     "from sagemaker.tensorflow.serving import Model\n",
     "\n",
-    "tensorflow_serving_model = Model(model_data=estimator_dist.model_data,\n",
+    "tensorflow_serving_model = Model(model_data=estimator_hvd.model_data,\n",
     "                                 role=role,\n",
-    "                                 framework_version='1.12',\n",
+    "                                 framework_version='1.13',\n",
     "                                 sagemaker_session=sagemaker_session)\n",
     "\n",
     "input_data_path='s3://sagemaker-sample-data-{}/tensorflow/cifar10/images/png'.format(sagemaker_session.boto_region_name)\n",
     "output_data_path='s3://{}/{}/{}'.format(bucket, prefix, 'batch-predictions')\n",
     "batch_instance_count=2\n",
-    "batch_instance_type = 'ml.p2.xlarge'\n",
+    "batch_instance_type = 'ml.p3.2xlarge'\n",
     "concurrency=32\n",
     "max_payload_in_mb=1\n",
     "\n",
@@ -341,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If our model had 100% accuracy, and therefore 100% recall in every class, then all of the predictions would fall along the diagonal of the confusion matrix.  Here our model definitely is not 100% accurate, but manages to achieve good recall for most of the classes, though it performs worse for some classes, such as cats.  "
+    "If our model had 100% accuracy, and therefore 100% recall in every class, then all of the predictions would fall along the diagonal of the confusion matrix.  Here our model definitely is not 100% accurate, but manages to achieve good recall for most of the classes, though it performs worse for some classes.  "
    ]
   },
   {
@@ -350,7 +352,7 @@
    "source": [
     "## Model Deployment with Amazon Elastic Inference\n",
     "\n",
-    "Amazon SageMaker also lets you deploy a TensorFlow Serving model to a hosted Endpoint for real-time inference. As we will see, the processes for setting up hosted endpoints and Batch Transform jobs have significant differences.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
+    "Amazon SageMaker also lets you deploy a TensorFlow Serving model to a hosted Endpoint for real-time inference. The processes for setting up hosted endpoints and Batch Transform jobs have significant differences, as we will see.  Additionally, we will discuss why and how to use Amazon Elastic Inference with the hosted endpoint.\n",
     "\n",
     "### Deploying the Model\n",
     "\n",
@@ -367,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor = estimator_dist.deploy(initial_instance_count=1,\n",
+    "predictor = estimator_hvd.deploy(initial_instance_count=1,\n",
     "                                  instance_type='ml.m5.xlarge',\n",
     "                                  accelerator_type='ml.eia1.medium')"
    ]
