--- a/tf-distribution-options/tf-distributed-training.ipynb
+++ b/tf-distribution-options/tf-distributed-training.ipynb
@@ -59,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!wget -q https://raw.githubusercontent.com/aws-samples/amazon-sagemaker-script-mode/master/tf-distribution-options/generate_cifar10_tfrecords.py\n",
     "!python generate_cifar10_tfrecords.py --data-dir ./data"
    ]
   },
@@ -87,7 +88,7 @@
     "\n",
     "A common pattern in distributed training is to use dedicated processes to collect gradients computed by “worker” processes, then aggregate them and distribute the updated gradients back to the workers. These processes are known as parameter servers. In general, they can be run either on their own machines or co-located on the same machines as the workers. In a parameter server cluster, each parameter server communicates with all workers (“all-to-all”). The Amazon SageMaker prebuilt TensorFlow container comes with a built-in option to use parameter servers for distributed training. The container runs a parameter server thread in each training instance, so there is a 1:1 ratio of parameter servers to workers. With this built-in option, gradient updates are made asynchronously (though some other versions of parameters servers use synchronous updates). \n",
     "\n",
-    "Once we have a training script (see `train_ps.py` in the /code directory), the next step is to set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job.  It is very similar to an Estimator for training on a single machine, except we specify a `distributions` parameter to enable starting a parameter server on each training instance. "
+    "Script Mode requires a training script, which in this case is the `train_ps.py` file in the */code* subdirectory of the [related distributed training example GitHub repository](https://github.com/aws-samples/amazon-sagemaker-script-mode/tree/master/tf-distribution-options).  Once a training script is ready, the next step is to set up an Amazon SageMaker TensorFlow Estimator object with the details of the training job.  It is very similar to an Estimator for training on a single machine, except we specify a `distributions` parameter to enable starting a parameter server on each training instance. We'll reference the GitHub repository so we can keep our training code version controlled and avoid downloading it locally."
    ]
   },
   {
@@ -97,6 +98,9 @@
    "outputs": [],
    "source": [
     "from sagemaker.tensorflow import TensorFlow\n",
+    "\n",
+    "git_config = {'repo': 'https://github.com/aws-samples/amazon-sagemaker-script-mode', \n",
+    "              'branch': 'master'}\n",
     "\n",
     "ps_instance_type = 'ml.p3.2xlarge'\n",
     "ps_instance_count = 2\n",
@@ -108,9 +112,11 @@
     "                }\n",
     "hyperparameters = {'epochs': 60, 'batch-size' : 256}\n",
     "\n",
-    "estimator_ps = TensorFlow(base_job_name='ps-cifar10-tf',\n",
-    "                       source_dir='code',\n",
+    "estimator_ps = TensorFlow(\n",
+    "                       git_config=git_config,\n",
+    "                       source_dir='tf-distribution-options/code',\n",
     "                       entry_point='train_ps.py', \n",
+    "                       base_job_name='ps-cifar10-tf',\n",
     "                       role=role,\n",
     "                       framework_version='1.13',\n",
     "                       py_version='py3',\n",
@@ -259,9 +265,11 @@
     "\n",
     "hyperparameters = {'epochs': 60, 'batch-size' : 256}\n",
     "\n",
-    "estimator_hvd = TensorFlow(base_job_name='hvd-cifar10-tf',\n",
-    "                       source_dir='code',\n",
-    "                       entry_point='train_hvd.py', \n",
+    "estimator_hvd = TensorFlow(\n",
+    "                       git_config=git_config,\n",
+    "                       source_dir='tf-distribution-options/code',\n",
+    "                       entry_point='train_hvd.py',\n",
+    "                       base_job_name='hvd-cifar10-tf', \n",
     "                       role=role,\n",
     "                       framework_version='1.13',\n",
     "                       py_version='py3',\n",
@@ -315,9 +323,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Comparing Results from Parameter Servers and Horovod\n",
+    "\n",
     "Now that both training jobs are complete, we can compare the results.  The CIFAR-10 dataset is relatively small so the training jobs do not run long enough to draw detailed conclusions. However, it is likely that you can observe some differences even though training time was short, and training is a stochastic process with different results every time. The training time can be approximated for our purposes by looking at the \"Billable seconds\" log output at the end of each training job (at the bottom of the log output beneath the `fit` invocation code cells).\n",
     "\n",
-    "The Horovod training job tends to take a bit longer than the parameter server training job, while producing a somewhat more accurate model. The relative speed result is consistent with research showing that Horovod is more performant for larger clusters and models, while parameter servers have the edge for smaller clusters and models such as this one. Also, asynchronous model updates like those used by the parameter servers here require more epochs to converge to more accurate models, so it is not surprising if the parameter server model training completed faster for the same number of epochs as Horovord, but was less accurate. It also is likely that you can observe that the training curves for the Horovod training job are a bit smoother, reflecting the fact that synchronous gradient updates typically are less noisy than asynchronous updates."
+    "The Horovod training job tends to take a bit longer than the parameter server training job, while producing a somewhat more accurate model. The relative speed result is consistent with research showing that Horovod is more performant for larger clusters and models, while parameter servers have the edge for smaller clusters and models such as this one. Also, asynchronous model updates like those used by the parameter servers here require more epochs to converge to more accurate models, so it is not surprising if the parameter server model training completed faster for the same number of epochs as Horovord, but was less accurate. It also is likely that you can observe that the training curves for the Horovod training job are a bit smoother, reflecting the fact that synchronous gradient updates typically are less noisy than asynchronous updates.\n",
+    "\n",
+    "The following table summarizes some general guidelines regarding performance for each option. These rules aren’t absolute, and ultimately, the best choice depends on the specific use case. Typically, the performance significantly depends on how long it takes to share gradient updates during training. In turn, this is affected by the model size, gradients size, GPU specifications, and network speed.\n",
+    "\n",
+    "|  | Better CPU Performance | Better GPU Performance |\n",
+    "| :--- | :--- | :--- |\n",
+    "| larger number of gradients/bigger model size | Parameter Servers | Parameter Servers, OR Horovod on a single instance with multiple GPUs |\n",
+    "| smaller number of gradients/lesser model size | Parameter Servers | Horovod |\n",
+    "\n",
+    "Complexity is another consideration. Parameter servers are straightforward to use for one GPU per instance. However, to use multi-GPU instances, you must set up multiple towers, with each tower assigned to a different GPU. A “tower” is a function for computing inference and gradients for a single model replica, which in turn is a copy of a model training on a subset of the complete dataset. Towers involve a form of data parallelism. Horovod also employs data parallelism but abstracts away the implementation details.\n",
+    "\n",
+    "Finally, cluster size makes a difference. Given larger clusters with many GPUs, parameter server all-to-all communication can overwhelm network bandwidth. Reduced scaling efficiency can result, among other adverse effects. In such situations, you might find Horovod a better option."
    ]
   },
   {
@@ -365,7 +386,10 @@
    "source": [
     "from IPython.display import Image, display\n",
     "\n",
+    "os.system(\"aws s3 cp s3://sagemaker-workshop-pdx/cifar-10-module/sample-img ./sample-img --recursive --quiet\")\n",
+    "\n",
     "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
+    "\n",
     "images = []\n",
     "for entry in os.scandir('sample-img'):\n",
     "    if entry.is_file() and entry.name.endswith(\"png\"):\n",
@@ -392,7 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat ./code/inference.py"
+    "!wget -q https://raw.githubusercontent.com/aws-samples/amazon-sagemaker-script-mode/master/tf-distribution-options/code/inference.py\n",
+    "!cat ./inference.py"
    ]
   },
   {
@@ -417,7 +442,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat ./code/requirements.txt"
+    "!wget -q https://raw.githubusercontent.com/aws-samples/amazon-sagemaker-script-mode/master/tf-distribution-options/code/requirements.txt\n",
+    "!cat ./requirements.txt"
    ]
   },
   {
@@ -437,8 +463,6 @@
    "source": [
     "predictor.content_type = 'application/x-image'\n",
     "predictor.serializer = None\n",
-    "\n",
-    "labels = ['airplane','automobile','bird','cat','deer','dog','frog','horse','ship','truck']\n",
     "\n",
     "def get_prediction(file_path):\n",
     "    \n",
@@ -465,9 +489,14 @@
     "# Extensions\n",
     "\n",
     "Although we did not demonstrate them in this notebook, Amazon SageMaker provides additional ways to make distributed training more efficient for very large datasets:\n",
+    "\n",
+    "- **Sharding data**:  in this example we used one large TFRecord file containing the entire CIFAR-10 dataset, which is relatively small. However, larger datasets might require that you shard the data into multiple files, particularly if Pipe Mode is used (see below). Sharding may be accomplished by specifying an Amazon S3 data source as a [manifest file or ShardedByS3Key](https://docs.aws.amazon.com/sagemaker/latest/dg/API_S3DataSource.html). \n",
+    "\n",
     "- **VPC training**:  performing Horovod training inside a VPC improves the network latency between nodes, leading to higher performance and stability of Horovod training jobs.\n",
     "\n",
-    "- **Pipe Mode**:  using [Pipe Mode](https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms-training-algo.html#your-algorithms-training-algo-running-container-inputdataconfig) reduces startup and training times.  Pipe Mode streams training data from S3 as a Linux FIFO directly to the algorithm, without saving to disk.  For a small dataset such as CIFAR-10, Pipe Mode does not provide any advantage, but for very large datasets where training is I/O bound rather than CPU/GPU bound, Pipe Mode can substantially reduce startup and training times."
+    "- **Pipe Mode**:  using [Pipe Mode](https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms-training-algo.html#your-algorithms-training-algo-running-container-inputdataconfig) reduces startup and training times.  Pipe Mode streams training data from S3 as a Linux FIFO directly to the algorithm, without saving to disk.  For a small dataset such as CIFAR-10, Pipe Mode does not provide any advantage, but for very large datasets where training is I/O bound rather than CPU/GPU bound, Pipe Mode can substantially reduce startup and training times.\n",
+    "\n",
+    "- **Amazon FSx for Lustre and Amazon EFS**:  performance on large datasets in File Mode may be improved in some circumstances using either Amazon FSx for Lustre or Amazon EFS. For more details, please refer to the related [blog post](https://aws.amazon.com/blogs/machine-learning/speed-up-training-on-amazon-sagemaker-using-amazon-efs-or-amazon-fsx-for-lustre-file-systems)."
    ]
   },
   {
